adds possibility to choose specific time period when searching monuments

--- a/polishness/templates/polishness/monuments.html
+++ b/polishness/templates/polishness/monuments.html
@@ -96,10 +96,34 @@ poznajmypolske.pl
     <div class="col-md-6 col-sm-12 p-1">
             <input type="text" name="function" placeholder="...wpisz funkcję zabytku..." class="form-control custom-rounded" autocomplete="off">
     </div>
-    <div class="col-md-6 col-sm-12 p-1">
-            <input type="text" name="chronology" placeholder="...wpisz datę powstania zabytku..." class="form-control custom-rounded" autocomplete="off">
-    </div>
-
+    <div class="col-lg-6 col-md-6 col-sm-12 p-1">
+        <select name="chronology" id="chronology"  class="form-control custom-rounded">
+                <option value="" disabled selected>...wybierz okres powstania zabytku...</option>
+                <option value="pradzieje">pradzieje</option>
+                <option value="epoka kamienia">epoka kamienia</option>
+                <option value="epoka brązu">epoka brązu</option>
+                <option value="epoka żelaza">epoka żelaza</option>
+                <option value="średniowiecze">średniowiecze</option>
+                <option value="nowożytność">nowożytność</option>
+                <option value="średniowiecze">średniowiecze</option>
+                <option value="współczesność">współczesność</option>
+                <option value="VII wiek">VII wiek</option>
+                <option value="VIII wiek">VIII wiek</option>
+                <option value="IX wiek">IX wiek</option>
+                <option value="X wiek">X wiek</option>
+                <option value="XI wiek">XI wiek</option>
+                <option value="XII wiek">XII wiek</option>
+                <option value="XIII wiek">XIII wiek</option>
+                <option value="XIV wiek">XIV wiek</option>
+                <option value="XV wiek">XV wiek</option>
+                <option value="XVI wiek">XVI wiek</option>
+                <option value="XVII wiek">XVII wiek</option>
+                <option value="XVIII wiek">XVIII wiek</option>
+                <option value="XIX wiek">XIX wiek</option>
+                <option value="XX wiek">XX wiek</option>
+                <option value="Data nieznana">Data nieznana</option>
+            </select>
+        </div>
 
     </div>
     <div class="row mb-3">
