improve description for monument search

--- a/polishness/templates/polishness/monuments.html
+++ b/polishness/templates/polishness/monuments.html
@@ -46,8 +46,10 @@ poznajmypolske.pl
            <h2 class="mb-2" align="left" style="text-decoration: underline;">Na tej stronie możesz skorzystać z wyszukiwarki zabytków:</h2>
                <ul>
                    <li>źródłem zabytków są <a style="font-weight: bold; color: black;" href="https://dane.gov.pl/pl/dataset/1130,rejestr-zabytkow-nieruchomych">Rejestr zabytków nieruchomych</a> oraz <a style="font-weight: bold; color: black;" href="https://dane.gov.pl/pl/dataset/210/resource/61339,rejestr-zabytkow-archeologicznych-plik-csv">Rejestr zabytków archeologicznych</a> utrzymywane przez <a href="https://nid.pl" style="font-weight: bold; color: black;">Narodowy Instytut Dziedzictwa</a>,</li>
+                   <li>wyszukiwarka pozwala na przeglądanie zabytków nieruchomych albo zabytków archeologicznych,</li>
                    <li>dla powiatów i gmin listy rozwijalne pojawiają się po wybraniu nadrzędnych jednostek administracyjnych,</li>
-                   <li>każdy wyszukany zabytek pozwala na zobaczenie go na portalu <a href="https://zabytek.pl" style="font-weight: bold; color: black;">zabytek.pl</a> albo zapytania o niego sztuczną inteligencję (<a href="https://openai.com" style="color: black;">openai.com</a>).</li>
+                   <li>epoki historyczne takie jak  'średniowiecze' i 'nowożytność' dotyczą tylko zabytków archeologicznych," style="font-weight: bold; color: black;">zabytek.pl</a> albo zapytania o niego sztuczną inteligencję (<a href="https://openai.com" style="color: black;">openai.com</a>).</li>
+                   <li>każdy wyszukany zabytek pozwala na zobaczenie go na portalu <a href="https://zabytek.pl" style="font-weight: bold; color: black;">zabytek.pl</a> albo zapytania o niego sztuczną inteligencję (<a href="https://openai.com" style="color: black;">openai.com</a>)</li>
                </ul>
            </div>
        </div>
@@ -105,7 +107,6 @@ poznajmypolske.pl
                 <option value="epoka żelaza">epoka żelaza</option>
                 <option value="średniowiecze">średniowiecze</option>
                 <option value="nowożytność">nowożytność</option>
-                <option value="średniowiecze">średniowiecze</option>
                 <option value="współczesność">współczesność</option>
                 <option value="VII wiek">VII wiek</option>
                 <option value="VIII wiek">VIII wiek</option>
