--- a/polishness/templates/polishness/photo_discovery.html
+++ b/polishness/templates/polishness/photo_discovery.html
@@ -29,6 +29,14 @@ poznajmypolske.pl
         background-color: #F5DECF;
     }
 
+    @media only screen and (max-width: 992px) {
+     .success {
+        font-size: 14px;
+     }
+    }
+
+
+
 {% endblock %}
 
 
@@ -43,15 +51,15 @@ poznajmypolske.pl
         </div>
     </div>
     {% else %}
-    <div class="row m-2 p-2">
+    <div class="row mt-2 p-2">
         <div class="col">
             <div class="success">Tutaj fotoodkrywamy, losujemy w różny sposób zdjęcia na temat Polski i cieszymy oko albo nie. Na dole znajdziesz frazę użytą do wyszukiwania.</div>
         </div>
     </div>
-    <div class="row m-4">
+    <div class="row m-2">
     {% for photo_link in photo_google_links %}
-                     <div class="col-6">
-                        <div class="card mb-4 box-shadow m-2" style="border: 2px solid #000; padding: 2px;">
+                     <div class="col-lg-6">
+                        <div class="card mb-4 box-shadow" style="border: 2px solid #000; padding: 2px;">
 
                             <div class="card-body">
                                 <div>
