--- a/polishness/templates/polishness/photo_discovery.html
+++ b/polishness/templates/polishness/photo_discovery.html
@@ -56,10 +56,10 @@ poznajmypolske.pl
             <div class="success">Tutaj fotoodkrywamy, losujemy w różny sposób zdjęcia na temat Polski i cieszymy oko albo nie. Na dole znajdziesz frazę użytą do wyszukiwania.</div>
         </div>
     </div>
-    <div class="row2">
+    <div class="row">
     {% for photo_link in photo_google_links %}
                      <div class="col-lg-6">
-                        <div class="card mb-3 box-shadow" style="border: 2px solid #000; padding: 2px;">
+                        <div class="card mb-4 box-shadow" style="border: 2px solid #000; padding: 2px;">
 
                             <div class="card-body">
                                 <div>
