fixes descr when photo discovering

--- a/polishness/templates/polishness/photo_discovery.html
+++ b/polishness/templates/polishness/photo_discovery.html
@@ -75,7 +75,7 @@ poznajmypolske.pl
     {% endif %}
 
 
-   <small style="text-align: right; display: block;">Zdjęcia wyszukiwane dla frazy: <b>'{{phrase}}'</b>.</small>
+   <small style="text-align: right; display: block;">Zdjęcia wyszukiwane frazą: <b>'{{phrase}}'</b>.</small>
 
 </div>
 
