--- a/polishness/templates/polishness/photo_discovery.html
+++ b/polishness/templates/polishness/photo_discovery.html
@@ -32,6 +32,8 @@ poznajmypolske.pl
     @media only screen and (max-width: 992px) {
      .success {
         font-size: 16px;
+		padding: 2px;            /* Internal padding */
+		margin-bottom: 4px;       /* Spacing below */
      }
     }
 
@@ -51,7 +53,7 @@ poznajmypolske.pl
         </div>
     </div>
     {% else %}
-    <div class="row mt-2 p-2">
+    <div class="row mt-2 mb-2">
         <div class="col">
             <div class="success">Tutaj fotoodkrywamy, losujemy w różny sposób zdjęcia na temat Polski i cieszymy oko albo nie. Na dole znajdziesz frazę użytą do wyszukiwania.</div>
         </div>
