updates main page, and footer

--- a/polishness/templates/polishness/footer.html
+++ b/polishness/templates/polishness/footer.html
@@ -82,7 +82,7 @@
         color: #cba6d6;
     }
 
-    a,p {
+    .custom-footer {
         color: #b39ddb;
         display: block;
     }
@@ -99,7 +99,7 @@
             <!-- About Section -->
             <div class="col-md-4 col-sm-12">
                 <h4 style="font-weight: bold;">Misja:</h4>
-                <p>Pomoc w odkrywaniu Polski!</p>
+                <p class="custom-footer">Pomoc w odkrywaniu Polski!</p>
             </div>
 
             <!-- Navigation Links -->
