--- a/polishness/templates/polishness/base.html
+++ b/polishness/templates/polishness/base.html
@@ -255,6 +255,13 @@
 
   <link rel="shortcut icon" type="image/png" href="{% static 'favicon.png' %}">
   </head>
+
+  <script>
+    function adjustIframeHeight(iframe) {
+        iframe.style.height = iframe.contentWindow.document.documentElement.scrollHeight + 'px';
+    }
+  </script>
+
   <body>
 
 
