--- a/polishness/templates/polishness/home.html
+++ b/polishness/templates/polishness/home.html
@@ -17,26 +17,36 @@ poznajmypolske.pl
         transform: scale(1.02); /* Slightly enlarge the brand */
         box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
     }
-
-    @media (max-width: 600px) {
-        #myIframe {
-            height: 50vh;  /* Wysokość dla małych ekranów */
-        }
+    .card {
+        background-color: #F6EB61;
+        border-radius: 8px;
+        transition: all 0.3s ease;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        border: 2px solid #000;
     }
 
-    @media (min-width: 601px) {
-        #myIframe {
-            height: 40vh;  /* Wysokość dla większych ekranów */
-        }
-    }
+<!--    @media (max-width: 600px) {-->
+<!--        #myIframe {-->
+<!--            height: 50vh;  /* Wysokość dla małych ekranów */-->
+<!--        }-->
+<!--    }-->
 
+<!--    @media (min-width: 601px) {-->
+<!--        #myIframe {-->
+<!--            height: 80vh;  /* Wysokość dla większych ekranów */-->
+<!--        }-->
+<!--    }-->
+
+    p {
+        color: #000;
+    }
 
 
 {% endblock %}
 
 {% block content %}
 
-{% if photo_link %}
+{% if response_ai %}
 
        <div class="row m-3">
            <div class="col-12">
@@ -48,9 +58,15 @@ poznajmypolske.pl
         <div class="row m-3">
             <small class="ml-3">Odpowiedź sztucznej inteligencji (openai.com):</small>
             <div class="col-12 m-2">
-                         <iframe id="myIframe" class="text-custom" src="data:text/html;charset=UTF-8,
-                                    {{response_ai}}" width="100%">
-                         </iframe>
+                <div class="card mb-4 box-shadow" style="border: 2px solid #000; padding: 2px;">
+                    <div class="card-body">
+                        <h3 style="font-weight: bold; color: black;">No więc ...</h3>
+                        {% for paragraph in response_ai %}
+                        <p>{{paragraph}}</p>
+                        {% endfor %}
+                    </div>
+                </div>
+
             </div>
         </div>
 
@@ -74,6 +90,18 @@ poznajmypolske.pl
                 </div>
             </div>
             <hr>
+<!--       <div class="row m-3">-->
+<!--           <div class="col">-->
+<!--                <h3 class="text-start">Poniżej losowe polskie zdjęcie (unsplash.com).</h3>-->
+<!--                <a href="{{photo_link}}" download="pobrane_zdjecie.jpg">-->
+<!--                    <img class="card-img-top" src="{{photo_link}}" alt="Pobierz zdjęcie">-->
+<!--                </a>-->
+<!--           </div>-->
+<!--       </div>-->
+<!--        <strong style="text-align: right; display: block;"><a href="{{photo_author_link}}?utm_source=DjangoPolishness&utm_medium=referral">{{photo_author}}</a> (<a href="https://unsplash.com/?utm_source=DjangoPolishness&utm_medium=referral">unsplash</a>)</strong>-->
+<!--       <br>-->
+
+
 {% endif %}
 
 {% endblock %}
@@ -81,15 +109,5 @@ poznajmypolske.pl
 
 
 {% block script %}
-
-<script>
-function resizeIframe(iframe) {
-    // Sprawdza, czy iframe zawiera treść i ustawia wysokość
-    if (iframe.contentDocument) {
-        iframe.style.height = iframe.contentDocument.body.scrollHeight + 'px';
-    }
-}
-</script>
-
 
 {% endblock %}
