adds small style changes around footer

--- a/polishness/templates/polishness/footer.html
+++ b/polishness/templates/polishness/footer.html
@@ -105,9 +105,9 @@
             <!-- Navigation Links -->
             <div class="col-md-4 col-sm-12">
                 <h4 style="font-weight: bold;">Przydatne linki:</h4>
-                    <a href="https://www.gov.pl/" target="_blank" aria-label="www.gov.pl">Serwis Rzeczypospolitej Polskiej </a>
-                    <a href="https://stat.gov.pl/" target="_blank" aria-label="stat.gov.pl">Główny Urząd Statystyczny</a>
-                    <a href="https://zabytek.pl/pl/" target="_blank" aria-label="zabytek.pl">Zabytek.pl</a>
+                    <a class="custom-footer" href="https://www.gov.pl/" target="_blank" aria-label="www.gov.pl">Serwis Rzeczypospolitej Polskiej </a>
+                    <a class="custom-footer" href="https://stat.gov.pl/" target="_blank" aria-label="stat.gov.pl">Główny Urząd Statystyczny</a>
+                    <a class="custom-footer" href="https://zabytek.pl/pl/" target="_blank" aria-label="zabytek.pl">Zabytek.pl</a>
             </div>
 
             <!-- Social Media Links -->
