improves description for Poland in numbers page

--- a/polishness/templates/polishness/poland_in_numbers.html
+++ b/polishness/templates/polishness/poland_in_numbers.html
@@ -25,13 +25,14 @@ poznajmypolske.pl
         <div class="col">
             <h4 class="text-start" style="text-decoration: underline;">Sposób korzystania ze strony: </h4>
             <ul>
-                <li><h5 class="text-start">wybierz poniżej kategorię, która Cię interesuje a następnie, wybierz konkretny obszar danej kategorii</h5></li>
-                <li><h5 class="text-start">powtarzaj wybieranie obszaru aż pojawi się dedykowana przeglądarka dla danego obszaru (to oznacza, że danych obszar jest parametrem statystycznym)</h5></li>
+                <li><h5 class="text-start">wybierz poniżej kategorię, która Cię interesuje a następnie, wybierz konkretny obszar danej kategorii,</h5></li>
+                <li><h5 class="text-start">powtarzaj wybieranie obszaru aż pojawi się dedykowana przeglądarka dla danego obszaru (to oznacza, że danych obszar jest parametrem statystycznym),</h5></li>
                 <li><h5 class="text-start">w dedykowanej przeglądarce wybierz:</h5></li>
                 <ul>
-                            <li><h5 class="text-start">przekrój danych (można rozumieć jako sposób grupowania danych)</h5></li>
-                            <li><h5 class="text-start">okres czasowy (jednostka czasu według, której będą wyświetlane dane) i rok</h5></li>
+                            <li><h5 class="text-start">przekrój danych (można rozumieć jako sposób grupowania danych),</h5></li>
+                            <li><h5 class="text-start">okres czasowy (jednostka czasu według, której będą wyświetlane dane) i rok.</h5></li>
                     </ul>
+                <li><h5 class="text-start">w rezultacie zostają wyświetlone surowe tabelaryczne dane, które są gotowe do przeglądania. <span style="background-color: yellow;">Danych jest ogrom i są to dane statystyczne</span> stąd niektóre są mniej albo bardziej intuicyjne.</h5></li>
             </ul>
         </div>
     </div>
@@ -48,6 +49,27 @@ poznajmypolske.pl
                     </div>
 
     {% endfor %}
+    </div>
+    <br>
+    <hr>
+
+    <div class="row mt-3">
+        <div class="col">
+            <h4 class="text-start" style="text-decoration: underline;">Przykładowe przypadki użycia - jakie informacje mogę tutaj znaleźć?</h4>
+            <ul>
+                <li><h5 class="text-start">Ceny, np średnie ceny nieruchomości w województwach/powiatach, ale też m.in.:</h5></li>
+                <ul>
+                    <li><h5 class="text-start">ceny gruntów ornych, ceny skupu produktów rolnych.</h5></li>
+                </ul>
+                <li><h5 class="text-start">Statystyki dotyczące finansów publicznych na poziomie państwowym i samorządowym:</h5></li>
+                <ul>
+                    <li><h5 class="text-start">możesz np. sprawdzić wynik finansowy swojej gminy w zeszłym roku.</h5></li>
+                </ul>
+                <li><h5 class="text-start">Dane dotyczące wynalazków, patentów i wzorów użytkowych.</h5></li>
+                <li><h5 class="text-start">Statystyki opisujące: koszty pracy, życie rodzinne, kulturę.</h5></li>
+                <li><h5 class="text-start">Informacje na temat zanieczyszczenia powietrza, powierzchni lasów.</h5></li>
+            </ul>
+        </div>
     </div>
 
 {% endblock %}
