--- a/polishness/templates/polishness/home.html
+++ b/polishness/templates/polishness/home.html
@@ -60,7 +60,7 @@ poznajmypolske.pl
             <div class="col-12 m-2">
                 <div class="card mb-4 box-shadow" style="border: 2px solid #000; padding: 2px;">
                     <div class="card-body">
-                        <h3 style="font-weight: bold; color: black;">No więc ...</h3>
+<!--                        <h3 style="font-weight: bold; color: black;">No więc ...</h3>-->
                         {% for paragraph in response_ai %}
                         <p>{{paragraph}}</p>
                         {% endfor %}
