fix typo mistake

--- a/polishness/templates/polishness/poland_in_numbers.html
+++ b/polishness/templates/polishness/poland_in_numbers.html
@@ -16,7 +16,7 @@ poznajmypolske.pl
 {% block content %}
     <div class="row mt-3">
         <div class="col">
-            <h4 class="text-start">Celem tego miejsca jest umożliwienie przyjrzenia się Polsce z różnorakich perspektyw statystycznych. Do tego celu wykorzystywane są dane z <b>Dziedzinowych Baz Wiedzy</b> Głównego Urzędu Statystycznego. Dane przedstawiane są tutaj tabelarycznie, natomiast rozbudowany interfejs graficzny można znależć na stronie <b><a style="color: black;" href="https://dbw.stat.gov.pl/">GUSu</a></b>.</h4>
+            <h4 class="text-start">Celem tego miejsca jest umożliwienie przyjrzenia się Polsce z różnorakich perspektyw statystycznych. Do tego celu wykorzystywane są dane z <b>Dziedzinowych Baz Wiedzy</b> Głównego Urzędu Statystycznego. Dane przedstawiane są tutaj tabelarycznie, natomiast rozbudowany interfejs graficzny można znaleźć na stronie <b><a style="color: black;" href="https://dbw.stat.gov.pl/">GUSu</a></b>.</h4>
         </div>
     </div>
     <hr>
