--- a/polishness/templates/polishness/home.html
+++ b/polishness/templates/polishness/home.html
@@ -38,8 +38,9 @@ poznajmypolske.pl
 
        <div class="row m-3">
            <div class="col-12">
-               <h3 class="text-start">Cześć! Wizją jest tutaj odkrywanie naszego kraju poprzez różne proste technologicznie narzędzia i <b>zabawa</b>.</h3>
-               <h3 class="text-start">Zapytajmy sztuczną inteligencję ... <b><em>Jak poznawać Polskę i dobrze się przy tym bawić?</em></b></h3>
+               <h3 class="text-start">Cześć! Wizją jest tutaj odkrywanie naszego kraju poprzez różne proste technologicznie narzędzia i <b>zabawa</b>. W menu nawigacyjnym znadziesz wszystkie obecnie dostępne narzędzia.</h3>
+               <hr>
+               <h3 class="text-start">Na początek, zapytajmy sztuczną inteligencję ... <b><em>Jak poznawać Polskę i dobrze się przy tym bawić?</em></b></h3>
            </div>
        </div>
 
@@ -61,7 +62,8 @@ poznajmypolske.pl
 
        <div class="row m-3">
            <div class="col-12">
-               <h3 class="text-start">Przyjrzyjmy się odrobinę historii Polski. Dziś jest <b>{{day}}</b> i oto kilka ważnych wydarzeń z historii naszego kraju, które miały miejsce tego dnia:</h3>
+               <h3 class="text-start" style="background-color: #FFA07A; display: inline-block;"><b>Historia</b></h3>
+               <h3 class="text-start">Teraz, przyjrzyjmy się odrobinę historii Polski. Dziś jest <b style="background-color: #FFA07A;">{{day}}</b> i oto kilka ważnych wydarzeń z historii naszego kraju, które miały miejsce tego dnia:</h3>
 
            {% for news in history_news %}
            <ul>
