--- a/polishness/templates/polishness/home.html
+++ b/polishness/templates/polishness/home.html
@@ -62,7 +62,7 @@ poznajmypolske.pl
 
        <div class="row m-3">
            <div class="col-12">
-               <h3 class="text-start" style="background-color: #FFA07A; display: inline-block;"><b>Historia</b></h3>
+               <h3 class="text-start" style="display: inline-block;"><b>Historia</b></h3>
                <h3 class="text-start">Teraz, przyjrzyjmy się odrobinę historii Polski. Dziś jest <b style="background-color: #FFA07A;">{{day}}</b> i oto kilka ważnych wydarzeń z historii naszego kraju, które miały miejsce tego dnia:</h3>
 
            {% for news in history_news %}
