adds all regarding press news functionality

--- a/polishness/templates/polishness/base.html
+++ b/polishness/templates/polishness/base.html
@@ -174,10 +174,10 @@
 		margin: 0px;            /* Internal margin */
     }
 
-    .card-body h5 a {
-        color: #333;
-        text-decoration: none;
-    }
+<!--    .card-body h5 a {-->
+<!--        color: #333;-->
+<!--        text-decoration: none;-->
+<!--    }-->
 
     .card-body h4 a {
         color: #333;
@@ -276,6 +276,7 @@
         <div class="navbar-nav mr-auto">
             <strong><a class="navbar-brand m-3 p-2 btn-dark" href="{% url 'polishness:photo_discovery' %}">Fotoodkrywanie</a></strong>
             <strong><a class="navbar-brand m-3 p-2 btn-dark" href="{% url 'polishness:poland_in_numbers' %}">Polska w liczbach</a></strong>
+            <strong><a class="navbar-brand m-3 p-2 btn-dark" href="{% url 'polishness:press_news' %}">Prasówka</a></strong>
             <strong><a class="navbar-brand m-3 p-2 btn-dark" href="{% url 'polishness:nature' %}">Przyroda</a></strong>
             <strong><a class="navbar-brand m-3 p-2 btn-dark" href="{% url 'polishness:monuments' %}">Zabytki</a></strong>
         </div>
