--- a/polishness/templates/polishness/photo_discovery.html
+++ b/polishness/templates/polishness/photo_discovery.html
@@ -37,7 +37,7 @@ poznajmypolske.pl
      }
     }
 
-    .link-right {
+    .link-custom {
             display: flex;
             justify-content: center; /* Wyśrodkowanie w poziomie */
             align-items: center; /* Wyśrodkowanie w pionie */
@@ -45,13 +45,13 @@ poznajmypolske.pl
         }
 
 
-    .link-right a {
-             backgrounf-color: yellow;
+    .link-custom a {
+             background-color: yellow;
              color: yellow;
         }
 
-    .link-right a:hover {
-             backgrounf-color: yellow;
+    .link-custom a:hover {
+             background-color: yellow;
              color: yellow;
              transform: scale(1.02); /* Slightly enlarge the brand */
              box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
@@ -99,7 +99,7 @@ poznajmypolske.pl
    <small style="text-align: right; display: block;">Zdjęcia wyszukiwane frazą: <b>'{{phrase}}'</b>.</small>
 
     <hr>
-    <div class="link-right mb-4">
+    <div class="link-custom mb-4">
             <a href="{% url 'polishness:photo_discovery' %}" class="btn btn-dark btn-lg mt-1" style="font-weight: bold; text-align: center;">Wyszukaj ponownie zdjęcia.</a>
     </div>
 
