adds styling fix for smaller monitors

--- a/polishness/templates/polishness/press_news.html
+++ b/polishness/templates/polishness/press_news.html
@@ -103,13 +103,13 @@ poznajmypolske.pl
     </div>
     {% else %}
     <div class="row mt-3 mb-2">
-        <div class="col-9">
+        <div class="col-12 col-md-9">
 
             <h3 class="text-start">Poniżej znajdziejsz dzisiejszą prasówkę. Kolory opisują konkretne media. Bloczki zawierają linki bezpośrednio do portali informacyjnych.</h3>
        </div>
 
 
-        <div class="col-3">
+        <div class="col-12 col-md-3">
 
 
             <div style="text-align: right; border: None; padding: 10px; width: 200px; float: right;">
