adds small fix for photo discovery functionality

--- a/polishness/templates/polishness/photo_discovery.html
+++ b/polishness/templates/polishness/photo_discovery.html
@@ -46,12 +46,12 @@ poznajmypolske.pl
 
 
     .link-custom a {
-             background-color: yellow;
+             background-color: #000;
              color: yellow;
         }
 
     .link-custom a:hover {
-             background-color: yellow;
+             background-color: F000;
              color: yellow;
              transform: scale(1.02); /* Slightly enlarge the brand */
              box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
@@ -100,7 +100,7 @@ poznajmypolske.pl
 
     <hr>
     <div class="link-custom mb-4">
-            <a href="{% url 'polishness:photo_discovery' %}" class="btn btn-dark btn-lg mt-1" style="font-weight: bold; text-align: center;">Wyszukaj ponownie zdjęcia.</a>
+            <a href="{% url 'polishness:photo_discovery' %}" class="btn btn-dark btn-lg mt-1" style="font-weight: bold; text-align: center;">Wyszukaj ponownie zdjęcia</a>
     </div>
 
 
