--- a/polishness/templates/polishness/press_news.html
+++ b/polishness/templates/polishness/press_news.html
@@ -143,7 +143,7 @@ poznajmypolske.pl
 
     <div class="row">
     {% for news in press_news %}
-                     <div class="col-lg-6">
+                     <div class="col-lg-5 m-1">
                         <div class="card mb-4 box-shadow {{news.publisher_nick}}" style="border: 2px solid #000; padding: 2px;">
 
                             <div class="card-body {{news.publisher_nick}}">
