--- a/polishness/templates/polishness/home.html
+++ b/polishness/templates/polishness/home.html
@@ -8,7 +8,7 @@ poznajmypolske.pl
 {% block style %}
 
     .text-custom {
-        background-color: #F6EB61;
+        background-color: #F5F5DC;
         border: 2px solid #000;;
         border-radius: 10px;
     }
@@ -18,7 +18,7 @@ poznajmypolske.pl
         box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
     }
     .card {
-        background-color: #F6EB61;
+        background-color: #F5F5DC;
         border-radius: 8px;
         transition: all 0.3s ease;
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
