changes email for contact details

--- a/polishness/templates/polishness/privacy_policy.html
+++ b/polishness/templates/polishness/privacy_policy.html
@@ -58,7 +58,7 @@ poznajmypolske.pl
 
         <div class="row mt-1">
             <ul class="custom-list">
-                <li>Administrator / Usługodawca – Daniel Palacz, osoba prowadząca serwis „poznajmypolske.pl”. Daniel Palacz jednocześnie posiada zarejestrowaną jednoosobową działalność gospodarczą PYX Daniel Palacz (NIP: 6372087213), jednakże w sensie prawnym niniejszy Serwis jest prowadzony niekomercyjnie przez osobę prywatną. Kontakt jest możliwy przez formularz kontaktowy lub adres email daniel.palacz@pyx.solutions.</li>
+                <li>Administrator / Usługodawca – Daniel Palacz, osoba prowadząca serwis „poznajmypolske.pl”. Daniel Palacz jednocześnie posiada zarejestrowaną jednoosobową działalność gospodarczą PYX Daniel Palacz (NIP: 6372087213), jednakże w sensie prawnym niniejszy Serwis jest prowadzony niekomercyjnie przez osobę prywatną. Kontakt jest możliwy przez formularz kontaktowy lub adres email contact@poznajmypolske.pl.</li>
                 <li>Cookies (ciasteczka) – pliki służące identyfikacji przeglądarki Użytkownika, w celu optymalizacji działania serwisu.</li>
                 <li>Dane automatyczne – dane zbierane podczas wizyty Użytkownika, np. adres IP, typ przeglądarki, które są anonimowe i mogą służyć analizie statystyk.</li>
                 <li>Dane osobowe – oznaczają informacje o zidentyfikowanej lub możliwej do zidentyfikowania osobie fizycznej („osobie, której dane dotyczą”); możliwa do zidentyfikowania osoba fizyczna to osoba, którą można bezpośrednio lub pośrednio zidentyfikować, w szczególności na podstawie adresu email.</li>
@@ -157,7 +157,7 @@ poznajmypolske.pl
         <div class="row mt-1">
             <ul class="custom-list">
                 <li>Imię i nazwisko: Daniel Palacz</li>
-                <li>Adres e-mail: daniel.palacz@pyx.solutions</li>
+                <li>Adres e-mail: contact@poznajmypolske.pl</li>
             </ul>
 
         </div>
