--- a/polishness/templates/polishness/statute.html
+++ b/polishness/templates/polishness/statute.html
@@ -71,7 +71,7 @@ poznajmypolske.pl
                 <li>Serwis – witryna internetowa https://poznajmypolske.pl dostarczająca proste narzędzia wspierające działania krajoznawcze na terenie Polski.</li>
                 <li>Usługi elektroniczne - wszystkie usługi świadczone na odległość w ramach Serwisu.</li>
                 <li>Usługi informacyjne - bezpłatne usługi elektroniczne wykonywane w ramach Serwisu, polegające na przedstawianiu Użytkownikowi różnorakich treści krajoznawczych na terenie Polski.</li>
-                <li>Usługodawca – Daniel Palacz, osoba prowadząca serwis „poznajmypolske.pl”. Daniel Palacz jednocześnie posiada zarejestrowaną jednoosobową działalność gospodarczą PYX Daniel Palacz (NIP: 6372087213), jednakże w sensie prawnym niniejszy Serwis jest prowadzony niekomercyjnie przez osobę prywatną. Kontakt jest możliwy przez formularz kontaktowy lub adres email daniel.palacz@pyx.solutions.</li>
+                <li>Usługodawca – Daniel Palacz, osoba prowadząca serwis „poznajmypolske.pl”. Daniel Palacz jednocześnie posiada zarejestrowaną jednoosobową działalność gospodarczą PYX Daniel Palacz (NIP: 6372087213), jednakże w sensie prawnym niniejszy Serwis jest prowadzony niekomercyjnie przez osobę prywatną. Kontakt jest możliwy przez formularz kontaktowy lub adres email contact@poznajmypolske.pl.</li>
                 <li>Użytkownik – osoba fizyczna, która odwiedza Serwis i korzysta z dostępnych w nim Usług informacyjnych.</li>
             </ul>
 
