adds changes for SEO indexing

--- a/polishness/templates/polishness/home.html
+++ b/polishness/templates/polishness/home.html
@@ -1,7 +1,7 @@
 {% extends "polishness/base.html" %}
 
 {% block title %}
-poznajmypolske.pl
+poznajmypolske.pl - tutaj poznajemy Polskę
 {% endblock %}
 
 
