--- a/polishness/templates/polishness/base.html
+++ b/polishness/templates/polishness/base.html
@@ -16,6 +16,7 @@
     {% block title %}
     {% endblock %}
     </title>
+    <link rel="canonical" href="https://poznajmypolske.pl">
 
     <style>
 
